# plugin-manager

./: CMakeLists.txt  default-config.json
include/: service-config.hpp  service-impl.hpp
service/include/: PluginRegistrator.hpp  service-config.hpp  service-impl.hpp
service/src/: main.cpp
service/systemd/: plugin-manager.service
